# KanStack

./: .gitignore  README.md  index.html  lessons.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release-macos-dmg.yml
Example Workspace/boards/: kanstack-project-board.md  main.md
Example Workspace/cards/: autosave-card-editor.md  better-new-card-placement.md  delete-undo-flow.md  delete-undo-flows.md  drag-ghost-and-drop-targets.md  example-workspace-refresh.md  markdown-workspace-loader.md  monochrome-theme-pass.md  new-card-flow.md  pointer-drag-and-drop.md  rename-collision-ux.md  safe-card-delete.md  title-based-card-rename.md  untitled-card.md  vue-tauri-shell.md  workspace-file-watch.md
TODO/: README.md  todo.md
TODO/boards/: main.md
TODO/cards/: add-board-sorting-and-filtering.md  cant-rename-column-by-clicking-title-any-more.md  card-chip-due-date-display.md  card-due-date-support.md  card-move-regression-after-view-prefs.md  close-folder-menu.md  crawl-deepwiki-locally.md  cross-workspace-boards.md  kanstack-skill.md  (+16 more)
docs/: PLAN.md
scripts/: README.md  export-deepwiki.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  Credits.html  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs
src-tauri/src/backend/: commands.rs  mod.rs  models.rs  workspace.rs
src-tauri/src/backend/commands/: board.rs  card.rs  config.rs  reveal.rs  support.rs  watcher.rs  workspace.rs
src-tauri/src/backend/workspace/: discovery.rs  fs.rs  loading.rs  markdown.rs  paths.rs
tasks/: lessons.md  todo.md
(+145 files in other folders)
