[package]
name = "kanstack"
version = "0.4.1"
description = "A minimal local-first kanban board viewer"
authors = ["Galen Green"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "6"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
trash = "5"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
strip = true
lto = true
