[package]
name = "KanStack"
version = "0.5.3"
description = "A minimal local-first kanban board viewer"
authors = ["Galen Green"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
trash = "5"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
strip = true
lto = true
